--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-egg = "0.5.0"
+egg = { git = "https://github.com/mwillsey/egg", rev = "6e80da67aeabaf5692ca9a339495b073ef73322f" }
 itertools = "0.9.0"
-
+rand_pcg = "0.2"
+rand = { version = "0.7", default-features = false, features = ["std"] }
 
 [dev-dependencies]
 env_logger = {version = "0.7", default-features = false}
